--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^16.0.0",
     "react-scripts": "^1.0.14",
+    "react-stars": "^2.2.5",
     "react-transition-group": "^2.2.1",
     "underscore": "^1.8.3"
   },
