--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "firebase": "^4.5.0",
     "react": "^16.0.0",
+    "react-alert": "^2.4.0",
     "react-bootstrap": "^0.31.3",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^16.0.0",
