--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "firebase": "^4.5.0",
-    "react": "^16.0.0",
+    "konva": "^1.7.6",
+    "react": "^16.2.0",
     "react-alert": "^2.4.0",
     "react-bootstrap": "^0.31.3",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^16.0.0",
+    "react-konva": "^1.6.4",
     "react-scripts": "^1.0.14",
+    "react-shapes": "^0.1.0",
     "react-stars": "^2.2.5",
     "react-transition-group": "^2.2.1",
     "underscore": "^1.8.3"
