--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "konva": "^1.7.6",
     "react": "^16.2.0",
     "react-absolute-grid": "^3.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-alert": "^2.4.0",
     "react-bootstrap": "^0.31.3",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^16.0.0",
+    "react-infinite-calendar": "^2.3.1",
     "react-konva": "^1.6.4",
     "react-scripts": "^1.0.14",
     "react-shapes": "^0.1.0",
