--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "classnames": "^2.2.5",
     "firebase": "^4.5.0",
     "konva": "^1.7.6",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-absolute-grid": "^3.0.0",
     "react-alert": "^2.4.0",
     "react-bootstrap": "^0.31.3",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^16.0.0",
+    "react-infinite": "^0.12.1",
     "react-konva": "^1.6.4",
+    "react-masonry-component": "^6.0.1",
+    "react-responsive-modal": "^2.0.0",
     "react-scripts": "^1.0.14",
     "react-shapes": "^0.1.0",
     "react-stars": "^2.2.5",
