Cleaning up styles in Journal and Navbar

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,10 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "https://github.com/BerkeleySprout/sprout-web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
   }
-  
 }
