--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
     "firebase": "^5.5.5",
+    "firebase-admin": "^6.1.0",
     "fs-extra": "7.0.0",
     "hoek": "^5.0.4",
     "html-webpack-plugin": "4.0.0-alpha.2",
